<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <!--Q4-->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:gravity="center"
    android:background="@color/byciclover_soft_gray">
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/byciclover_soft_gray">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_info_q4"
        android:textColor="@color/byciclover_purple"
        android:textSize="17.33dp"
        fontPath="fonts/NotoSansCJKkr-Medium.otf" />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_info_q4_string"
        android:textColor="@color/byciclover_black"
        android:textSize="17.33dp" />
    </LinearLayout>
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="112.67dp"
    android:gravity="center">
    <TextView android:id="@+id/fragment_info_detail_q4_1"
      android:layout_height="33.33dp"
      android:layout_width="107.33dp"
      android:background="@drawable/rectangle_full_rounded"
      android:layout_marginEnd="8dp"
      android:gravity="center"
      android:text="@string/detail_info_q4_1"
      android:textColor="@color/byciclover_sub_text"
      android:textSize="15.33dp"
      fontPath="fonts/NotoSansCJKkr-Bold.otf" />
    <TextView android:id="@+id/fragment_info_detail_q4_2"
      android:layout_height="33.33dp"
      android:layout_width="107.33dp"
      android:background="@drawable/rectangle_full_rounded"
      android:layout_marginEnd="8dp"
      android:gravity="center"
      android:text="@string/detail_info_q4_2"
      android:textColor="@color/byciclover_sub_text"
      android:textSize="15.33dp"
      fontPath="fonts/NotoSansCJKkr-Bold.otf" />
    <TextView android:id="@+id/fragment_info_detail_q4_3"
      android:layout_height="33.33dp"
      android:layout_width="107.33dp"
      android:background="@drawable/rectangle_full_rounded"
      android:gravity="center"
      android:text="@string/detail_info_q4_3"
      android:textColor="@color/byciclover_sub_text"
      android:textSize="15.33dp"
      fontPath="fonts/NotoSansCJKkr-Bold.otf" />
  </LinearLayout>

  <!--Q5-->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:gravity="center"
    android:background="@color/byciclover_soft_gray">
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/byciclover_soft_gray">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_info_q5"
        android:textColor="@color/byciclover_purple"
        android:textSize="17.33dp"
        fontPath="fonts/NotoSansCJKkr-Medium.otf" />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_info_q5_string"
        android:textColor="@color/byciclover_black"
        android:textSize="17.33dp" />
    </LinearLayout>
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="112.67dp"
    android:gravity="center">
    <TextView android:id="@+id/fragment_info_detail_q5_1"
      android:layout_height="33.33dp"
      android:layout_width="107.33dp"
      android:background="@drawable/rectangle_full_rounded"
      android:layout_marginEnd="8dp"
      android:gravity="center"
      android:text="@string/detail_info_q5_1"
      android:textColor="@color/byciclover_sub_text"
      android:textSize="15.33dp"
      fontPath="fonts/NotoSansCJKkr-Bold.otf" />
    <TextView android:id="@+id/fragment_info_detail_q5_2"
      android:layout_height="33.33dp"
      android:layout_width="107.33dp"
      android:background="@drawable/rectangle_full_rounded"
      android:gravity="center"
      android:text="@string/detail_info_q5_2"
      android:textColor="@color/byciclover_sub_text"
      android:textSize="15.33dp"
      fontPath="fonts/NotoSansCJKkr-Bold.otf" />
  </LinearLayout>

  <!--Q6-->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:gravity="center"
    android:background="@color/byciclover_soft_gray">
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/byciclover_soft_gray">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_info_q6"
        android:textColor="@color/byciclover_purple"
        android:textSize="17.33dp"
        fontPath="fonts/NotoSansCJKkr-Medium.otf" />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_info_q6_string"
        android:textColor="@color/byciclover_black"
        android:textSize="17.33dp" />
    </LinearLayout>
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:paddingTop="23.33dp">
    <LinearLayout
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginEnd="37.33dp"
      android:orientation="vertical">
      <ImageView android:id="@+id/fragment_info_detail_q6_1"
        android:layout_height="61.33dp"
        android:layout_width="61.33dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10.67dp"
        android:src="@drawable/good_icon_gray"
        android:background="@drawable/circle_gray_stroke" />
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/detail_info_q6_1"
        android:textAlignment="center"
        android:textColor="@color/byciclover_sub_text"
        android:textSize="15.33dp"
        fontPath="fonts/NotoSansCJKkr-Bold.otf" />
    </LinearLayout>
    <LinearLayout
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:orientation="vertical">
      <ImageView android:id="@+id/fragment_info_detail_q6_2"
        android:layout_height="61.33dp"
        android:layout_width="61.33dp"
        android:paddingStart="11.5dp"
        android:paddingEnd="10dp"
        android:paddingTop="11.5dp"
        android:paddingBottom="11.5dp"
        android:layout_marginBottom="10.67dp"
        android:src="@drawable/bad_icon_gray"
        android:background="@drawable/circle_gray_stroke" />
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/detail_info_q6_2"
        android:textAlignment="center"
        android:textColor="@color/byciclover_sub_text"
        android:textSize="15.33dp"
        fontPath="fonts/NotoSansCJKkr-Bold.otf"/>
    </LinearLayout>
  </LinearLayout>

</LinearLayout>